<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:neumorph_shadowColorLight="@color/light_blue"
        app:neumorph_shadowColorDark="@color/black"
        style="@style/Widget.Neumorph.CardView"
        app:neumorph_shapeType="basin"
        >
        <TextView
            android:id="@+id/_history"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="top"
            android:gravity="end|center"
            android:layout_margin="15dp"
            android:text=""
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/_output"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="bottom"
            android:gravity="end|center"
            android:layout_margin="15dp"
            android:text="@string/opText"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </soup.neumorphism.NeumorphCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <soup.neumorphism.NeumorphButton
            android:id="@+id/clr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/clr"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            tools:ignore="NestedWeights" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/mod"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/mod"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/del"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/div"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/ash"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/div"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <soup.neumorphism.NeumorphButton
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            tools:ignore="NestedWeights" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/mul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/ash"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/mul"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <soup.neumorphism.NeumorphButton
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            tools:ignore="NestedWeights" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/sub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/ash"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/sub"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <soup.neumorphism.NeumorphButton
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            tools:ignore="NestedWeights" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/ash"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/add"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <soup.neumorphism.NeumorphButton
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            tools:ignore="NestedWeights" />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:neumorph_shadowColorLight="@color/light_blue"
            app:neumorph_shadowColorDark="@color/black"
            android:text="@string/dot"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
            />
        <soup.neumorphism.NeumorphButton
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:neumorph_shadowColorDark="@color/black"
            app:neumorph_shadowColorLight="@color/green"
            android:text="@string/equal"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            style="@style/Widget.Neumorph.Button"
             />
    </LinearLayout>

</LinearLayout>